# DockerSparkFlow

./: .dockerignore  .env.docker  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
dags/: spark_dag.py  test_airflow_dag.py
docker/airflow/: Dockerfile  add_connections.py  entrypoint.sh
docker/spark/: Dockerfile  entrypoint.sh
jobs/: example_jobs.py  test_airflow.py  test_spark_submit.py
